[tool.poetry]
name = "test-schedule-reservation-system"
version = "0.1.0"
description = ""
authors = ["SoraKang <70902065+sora9z@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.4"
fastapi = "^0.115.5"
uvicorn = "^0.32.1"
sqlalchemy = "^2.0.36"
alembic = "^1.14.0"
pytest = "^8.3.3"
pytest-mock = "^3.14.0"
psycopg = {extras = ["binary", "pool"], version = "^3.2.3"}
dependency-injector = "^4.43.0"
pydentic = "^0.0.1.dev3"
asyncio = "^3.4.3"
pydantic-settings = "^2.6.1"
pytest-asyncio = "^0.24.0"
pydantic = {extras = ["email"], version = "^2.10.1"}
greenlet = "^3.1.1"


[tool.poetry.group.dev.dependencies]
isort = "^5.13.2"
black = "^24.10.0"
flake8 = "^7.1.1"
pre-commit = "^4.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 120
target-version = ['py39']
exclude = '''
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | ^.*\b(migrations)\b.*$
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 120
skip = [".gitignore", "migrations"]